--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring=
+    datasource=
+        url= jdbc:mysql://localhost:3306/skilldb
+        username= admin
+        password= 123456
+jpa=
+    hibernate=
+        ddl-auto= update
+    show-sql= true
