--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring=
-    datasource=
-        url= jdbc:mysql://localhost:3306/skilldb
-        username= admin
-        password= 123456
-jpa=
-    hibernate=
-        ddl-auto= update
-    show-sql= true
+server.port=4567
+
+spring.datasource.url=jdbc:mysql://localhost:3306/skilldb
+spring.datasource.username=admin
+spring.datasource.password=123456
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
