--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	implementation 'javax.validation:validation-api:2.0.1.Final'
 	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
 	implementation 'org.flywaydb:flyway-mysql:8.4.4'
+	implementation 'org.hibernate:hibernate-core:6.2.7.Final'
+	implementation 'org.hibernate:hibernate-envers:6.2.7.Final'
 
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
