--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -36,6 +37,7 @@ dependencies {
 	implementation 'org.flywaydb:flyway-mysql:8.4.4'
 	implementation 'org.hibernate:hibernate-core:6.2.7.Final'
 	implementation 'org.hibernate:hibernate-envers:6.2.7.Final'
+	implementation 'io.lettuce:lettuce-core'
 
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
@@ -62,4 +64,9 @@ tasks.named('asciidoctor') {
 
 test {
 	useJUnitPlatform()
+}
+
+task buildJar(type: Jar) {
+	from sourceSets.main.output
+	archiveFileName = "app.jar"
 }
