--- a/src/main/resources/flyway.conf
+++ b/src/main/resources/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:mysql://localhost:3306/skilldb
-flyway.user=admin
-flyway.password=123456
+flyway.url=${spring.datasource.url}
+flyway.user=${spring.datasource.username}
+flyway.password=${spring.datasource.password}
 flyway.locations=classpath:db/migration
