--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,15 @@ plugins {
 	id 'org.springframework.boot' version '3.1.2'
 	id 'io.spring.dependency-management' version '1.1.2'
 	id 'org.asciidoctor.jvm.convert' version '3.3.2'
+	id 'application'
 }
 
 group = 'prodyna'
 version = '0.0.1-SNAPSHOT'
+
+application {
+	mainClass.set('prodyna.skillApp.SkillApp')
+}
 
 java {
 	sourceCompatibility = '20'
@@ -39,12 +44,8 @@ dependencies {
 	implementation 'org.hibernate:hibernate-envers:6.2.7.Final'
 	implementation 'io.lettuce:lettuce-core'
 
-
 	runtimeOnly 'com.mysql:mysql-connector-j'
-
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
-
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
@@ -52,21 +53,7 @@ dependencies {
 	testImplementation 'org.testcontainers:junit-jupiter'
 }
 
-tasks.named('test') {
-	outputs.dir snippetsDir
-	useJUnitPlatform()
-}
-
 tasks.named('asciidoctor') {
 	inputs.dir snippetsDir
 	dependsOn test
-}
-
-test {
-	useJUnitPlatform()
-}
-
-tasks.register('buildJar', Jar) {
-	from sourceSets.main.output
-	archiveFileName = "app.jar"
 }
