--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.show-sql=true
 
 spring.data.redis.host=${SPRING_REDIS_HOST}
 spring.data.redis.port=${SPRING_REDIS_PORT}
+
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.prometheus.enabled=true
+management.prometheus.metrics.export.enabled=true
