--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 version: '3.1'
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: enverkayandan/skill-app
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:${DB_PORT}/${MYSQL_DATABASE}?createDatabaseIfNotExist=true
       SPRING_DATASOURCE_USERNAME: ${MYSQL_ROOT_USERNAME}
